Wed Aug 13 08:55:00 PST 2008 (jshirley) - Release 0.64
  New dist to fix issue with Module::Install

Wed Jul 09 11:16:00 PST 2008 (jshirley) - Release 0.63
  Changing from JSON::Syck to JSON/JSON::XS
  Refactored tests to be more applicable to current state of affairs

Wed Jul 02 07:53:00 PST 2008 (jshirley) - Release 0.62
  Reshipping with current Module::Install included due to error reports
    about failed installs


Mon Jun 30 12:28:00 PST 2008 (jshirley) - Release 0.61
  Support official application/json and carp about text/x-json
  Accepted patch from Luke Saunders for processing all accepted content types

Thu Jan  3 17:23:58 PST 2008 (adam) - Release 0.60
  Updated my contact information.
  Prepped for release.

Thu Jan  3 19:42:16 EST 2008 
	Fixed RT#30498 - REST controller references Catalyst without
	  loading it first.
	Fixed RT#32042 - Import of Params::Validate :all plays badly
	  with subclasses that have their own validate()
	Fixed RT#30456 - Debug messages print even with debugging disabled

Thu Jan  3 08:54:09 PST 2008
	Fixed an issue where YAML::Syck versions 0.92 require $c->request->body to
	  be stringified

Fri Dec 21 15:23:46 EDT 2007 
	Updated the configuration specifiers to operate more in line with the way
	Catalyst expects.  Most notably component based configuration through
	"Controller::RestClass" now works.  "serialize" at the top level simply
	is suggested defaults that all REST classes inherit.

Wed Jul 04 11:17:20 EDT 2007
	Fixed 'default' serializer to set a valid Content-Type: header.  Fixes
	RT ticket 27949.  Note that behavior has changed -- the default
	serializer must now be specified as a content-type, not as a plugin
	name. (dmo@roaringpenguin.com)

Thu May 24 14:01:06 PDT 2007 (adam) - Release 0.41
	Moved a bogus $self->class to $c->component($self->class)

Fri Mar  9 14:13:29 PST 2007 (adam) - Release 0.40
	Refactored the Content-Type negotiation to live in Catalyst::Request::REST.  (drolsky)