@@ -1,6 +1,6 @@
 package Catalyst::Controller::REST;
 
-our $VERSION = 0.64;
+our $VERSION = '0.65';
 
 =head1 NAME
 
