@@ -1,34 +1,35 @@
 use strict;
 use warnings;
-use Test::More tests => 9; 
+use Test::More;
 use FindBin;
 
 use lib ("$FindBin::Bin/lib", "$FindBin::Bin/../lib");
 use Test::Rest;
 
+eval 'require JSON';
+plan skip_all => 'Install JSON to run this test' if ($@);
+
+plan tests => 9;
+
 use_ok 'Catalyst::Test', 'Test::Serialize';
 
-SKIP: {
-    my $has_serializer = eval "require JSON::Syck";
+my $json = JSON->new;
+# The text/x-json should throw a warning
+for ('text/x-json', 'application/json') {
+    my $t = Test::Rest->new('content_type' => $_);
+    my $monkey_template = {
+        monkey => 'likes chicken!',
+    };
+    my $mres = request($t->get(url => '/monkey_get'));
+    ok( $mres->is_success, 'GET the monkey succeeded' );
+    is_deeply($json->decode($mres->content), $monkey_template, "GET returned the right data");
 
-    skip "JSON::Syck not available", 8, unless $has_serializer;
-
-    for ('text/x-json', 'application/json') {
-        my $t = Test::Rest->new('content_type' => $_);
-        my $monkey_template = {
-            monkey => 'likes chicken!',
-        };
-        my $mres = request($t->get(url => '/monkey_get'));
-        ok( $mres->is_success, 'GET the monkey succeeded' );
-        is_deeply(JSON::Syck::Load($mres->content), $monkey_template, "GET returned the right data");
-
-        my $post_data = {
-            'sushi' => 'is good for monkey',
-        };
-        my $mres_post = request($t->post(url => '/monkey_put', data => JSON::Syck::Dump($post_data)));
-        ok( $mres_post->is_success, "POST to the monkey succeeded");
-        is_deeply($mres_post->content, "is good for monkey", "POST data matches");
-    }
-};
+    my $post_data = {
+        'sushi' => 'is good for monkey',
+    };
+    my $mres_post = request($t->post(url => '/monkey_put', data => $json->encode($post_data)));
+    ok( $mres_post->is_success, "POST to the monkey succeeded");
+    is_deeply($mres_post->content, "is good for monkey", "POST data matches");
+}
 
 1;
