@@ -1,3 +1,8 @@
+Wed Aug 20 10:42:00 PST 2008 (jshirley) - Release 0.65
+  Fully revamped tests to work without any JSON support
+  Final removal of JSON::Syck
+  Special thanks to jgoulah for helping test this release
+
 Wed Aug 13 08:55:00 PST 2008 (jshirley) - Release 0.64
   New dist to fix issue with Module::Install
 
